Added feature to fetch upcoming contests
